[package]
name = "toro-auth-core"
version = "1.0.2"
edition = "2024"
license = "MIT"
description = "This crate provides the core functionalit to add authentication to your actix-web app. Note that this crate has been implemented without any security meassures in mind."
repository = "https://github.com/HideakiToro/toro-auth/core"
homepage = "https://github.com/HideakiToro"

[dependencies]
actix-web = { version = "4.12.1" }
async-trait = { version = "0.1.89" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
uuid = { version = "1.21.0" }