[package]
name = "toro-auth-example"
version = "1.0.1"
edition = "2024"

[dependencies]
actix-web = { version = "4.12.1" }
serde = { version = "1.0.228" }
tokio = { version = "1.49.0", features = ["full"] }
toro-auth-core = { version = "1.0.3" }
toro-auth-mongo = { version = "1.0.3" }
uuid = { version = "1.20.0", features = ["serde", "v4"] }