[package]
name = "toro-auth-mongo"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { version = "0.1.89" }
futures = { version = "0.3.31" }
mongodb = { version = "3.5.1" }
serde = { version = "1.0.228", features = ["derive"] }
toro-auth-core = { path = "../core" }
uuid = { version = "1.20.0", features = ["v4"] }